# advent-of-code-2025

./: .gitignore  Cargo.toml
2015/day_01/: Cargo.toml
2015/day_01/src/: lib.rs  main.rs
2015/day_02/: Cargo.toml
2015/day_02/src/: main.rs
2015/day_04/src/: lib.rs  main.rs
2015/day_05/: Cargo.toml
2015/day_05/src/: lib.rs  main.rs
2025/day_01/: Cargo.toml
2025/day_01/src/: lib.rs  main.rs
2025/day_02/: Cargo.toml
2025/day_02/src/: lib.rs  main.rs
2025/day_03/: Cargo.toml
2025/day_03/src/: main.rs
2025/day_04/: Cargo.toml
2025/day_04/src/: lib.rs  main.rs
2025/day_05/: Cargo.toml
2025/day_05/src/: lib.rs  main.rs
2025/day_06/: Cargo.toml
2025/day_06/src/: lib.rs  main.rs
2025/day_07/: Cargo.toml
2025/day_07/src/: lib.rs  main.rs
2025/day_08/: Cargo.toml
2025/day_08/src/: lib.rs  main.rs
2025/day_09/: Cargo.toml
2025/day_09/src/: main.rs
2025/day_10/: Cargo.toml
2025/day_10/src/: main.rs
2025/day_11/: Cargo.toml
2025/day_11/src/: lib.rs  (+1 more)
2025/day_12/: Cargo.toml
common/src/: lib.rs
day_01/src/: lib.rs  main.rs
day_02/: Cargo.toml
day_02/src/: main.rs
day_03/: Cargo.toml
day_03/src/: lib.rs  main.rs
day_04/: Cargo.toml
day_04/src/: lib.rs  main.rs
day_05/: Cargo.toml
day_05/src/: main.rs
day_07/: Cargo.toml
day_07/src/: lib.rs  main.rs
day_08/: Cargo.toml
day_08/src/: lib.rs  main.rs
day_09/: Cargo.toml
day_09/src/: lib.rs  main.rs
day_10/: Cargo.toml
day_10/src/: lib.rs  main.rs
day_11/: Cargo.toml
day_11/src/: lib.rs  main.rs
day_12/: Cargo.toml
day_12/src/: lib.rs  main.rs
(+2 files in other folders)
