[workspace]
resolver = "3"

members = [
    "common",
    "2024/day_01",
    "2024/day_02",
    "2025/day_01",
    "2025/day_02",
    "2025/day_03",
    "2025/day_04",
    "2025/day_05",
    "2025/day_06",
    "2025/day_07",
    "2025/day_08",
    "2025/day_09",
    "2025/day_10",
    "2025/day_11",
    "2025/day_12",
]
